<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScoutingApp</string>
    
    <!-- Button Strings -->
    <string name="button_mode_autonomous">Autonomous Mode</string>
    <string name="button_mode_teleop">Teleoperated Mode</string>
    
    <string name="button_score_high">Top</string>
    <string name="button_score_middle_right">Middle Right</string>
    <string name="button_score_middle_left">Middle Left</string>
    <string name="button_score_low">Bottom</string>
    
    <string name="button_missed_shots">Missed</string>
    
    
    <!-- Labels -->
    <string name="text_view_top_basket_label">Top</string>
    <string name="text_view_middle_basket_left_label">Middle Left</string>
    <string name="text_view_middle_basket_right_label">Middle Right</string>
    <string name="text_view_bottom_basket_label">Bottom</string>
    <string name="text_view_missed_shots_label">Missed</string>
    
    <string name="text_view_team_label">Team: </string>
    <string name="text_view_team">None</string>
    
    <string name="text_view_match_number_label">Match: </string>
    <string name="text_view_match_number">None</string>
    
    <string name="text_view_hang_label">Hangability</string>
    <string name="text_view_pushability_label">Pushability</string>
    
    <string name="text_view_climbability_label">Climbability</string>
    <string name="text_view_fivepointability_label">FivePointability</string>
    
    <string name="text_view_pickupability_label">Pickup Method</string>
    <string name="text_view_pickupspeed_label">Pickup Speed</string>
    
    <string name="text_view_penalties_label">Penalties</string>
    
    <string name="text_view_defence_label">Defence</string>
    
    <!-- Arrays -->
    <string-array name="spinner_hangability_options_array">
        <item>No Attempt</item>
        <item>Attempt and Failed</item>
        <item>Low Hang</item>
        <item>Middle Hang</item>
        <item>High Hang</item>
    </string-array>
    
    <string-array name="spinner_pushability_options_array">
        <item>Easily Pushed</item>
        <item>Average</item>
        <item>I\'m Not Moving!</item>
    </string-array>
    
    <string-array name="spinner_climbability_options_array">
        <item>No Hang</item>
        <item>Low Hang</item>
        <item>Mid Hang</item>
        <item>High Hang</item>
        <item>Failed Hang</item>
    </string-array>
    
    <string-array name="spinner_pickup_method_options_array">
        <item>No Pickup</item>
        <item>Feeder Station</item>
        <item>Floor</item>
        <item>Feeder And Floor</item>
    </string-array>
    
    <string-array name="spinner_pickupspeed_options_array">
        <item>No Pickup</item>
        <item>Slow</item>
        <item>Average</item>
        <item>Fast</item>
    </string-array>
    
    <string-array name="spinner_fivepointability_options_array">
        <item>Did Not Attempt</item>
        <item>Shot And Made</item>
        <item>Shot And Missed</item>
        <item>Failed Dump</item>
        <item>Dump</item>
    </string-array>
    
    <string-array name="spinner_pickup_speed_options_array">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Uber Fast</item>
    </string-array>
    
    <string-array name="spinner_speed_options_array">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Uber Fast</item>
    </string-array>
    
    <string-array name="spinner_penalties_options_array">
        <item>None</item>
        <item>One or Two</item>
        <item>Three or Four</item>
        <item>Way too many</item>
    </string-array>
    
    <string-array name="spinner_defence_options_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>

</resources>